<resources>
    <string name="app_name">MarvelApp</string>
    <string name="logo_do_aplicativo">Logo do aplicativo</string>
    <string name="email">Email</string>
    <string name="senha">Password</string>
    <string name="log_in">LOGIN</string>
    <string name="logo_facebook">Logo Facebook</string>
    <string name="logo_google">Logo Google</string>
    <string name="esqueci_minha_senha">forgot your password?</string>
    <string name="logar_com">Login with</string>
    <string name="n_o_tenho_cadastro">Don\'t have an account</string>
    <string name="todos">ALL</string>
    <string name="recomendados">RECOMMENDED FOR YOU</string>
    <string name="salvar">Save</string>
    <string name="alterar_senha">change your password</string>
    <string name="confirmar_cancelamento">Confirm cancel?</string>
    <string name="ao_cancelar">By canceling your changes will be lost</string>
    <string name="confirmar">CONFIRM</string>
    <string name="continuar_editando">KEEP EDITING</string>
    <string name="description">Captain Marvel (no Brasil, Capitã Marvel; em Portugal, Captain Marvel (Capitão Marvel)) é um filme estadunidense de super-herói de 2019, baseado na personagem Carol Danvers da Marvel Comics, produzido pela Marvel Studios e distribuído pela Walt Disney Studios Motion Pictures, sendo o vigésimo primeiro filme do Universo Cinematográfico Marvel. Dirigido por Anna Boden e Ryan Fleck, e escrito por Geneva Robertson-Dworet, é estrelado por Brie Larson, Samuel L. Jackson, Ben Mendelsohn, Djimon Hounsou, Lee Pace, Lashana Lynch, Gemma Chan, Algenis Perez Soto, Rune Temte, Mckenna Grace, Clark Gregg e Jude Law. Em 1995, a história segue Danvers quando ela se torna a Captain Marvel depois que a Terra é pego no centro de um conflito galáctico entre dois mundos alienígenas.</string>
    <string name="sobre">About</string>
    <string name="share">share</string>
    <string name="favorit">favorite</string>
    <string name="buscar_personagem">Character search</string>
    <string name="cadastrar">Register</string>
    <string name="nome">Name</string>
    <string name="nome_do_personagem">Character Name</string>
    <string name="home">Home</string>
    <string name="favoritos">Favorite</string>
    <string name="perfil">Profile</string>
    <string name="cancelar">Ao cancelar essa ação, seus dados cadastrais não serão alterados.</string>
    <string name="nome_completo">Full Name</string>
    <string name="e_mail_conta_social">Social Accounnt E-mail</string>
    <string name="sair_do_app">Log out</string>
    <string name="drescricao">Drescrição Drescrição Drescrição Drescrição Drescrição Drescrição Drescrição Drescrição Drescrição Drescrição Drescrição Drescrição Drescrição</string>
    <string name="comics">Comics</string>
    <string name="stories">Stories</string>
    <string name="character">Character</string>

    <!--    Autenticação com facebook -->
    <string name="facebook_app_id">2498184237143261</string>
    <string name="fb_login_protocol_scheme">fb2498184237143261</string>
    <string name="please_check_your_internet_connection_nand_try_again">Please check your internet connection\nand try again</string>
    <string name="your_list_is_empty_go_find_your_favorite_ones">Your list is empty. Go find your favorite ones</string>
    <string name="your_list_is_empty_go">Your list is empty. Go find your favorite ones :)</string>
    <string name="no_result_was_found_try_again">No result was found. Try again !</string>
    <string name="ops_disconected">Ops! Disconected</string>
    <string name="please_check_your_internet">Please check your internet connection\nand try again</string>
    <string name="ops_nofavorites">Hey! There is nothing here.</string>
    <string name="favorite_here">Your list is empty. Go and find your favorite ones :).</string>
    <string name="digite_seu_email_no_campo_abaixo">Type your e-mail in the field below.</string>
    <string name="cancel">By cancelling this action your data won\'t be saved or updated.</string>
    <string name="repeat_password">Repeat Password</string>

<!--    privacy, terms and conditions-->

    <string name="declaro">I agree to the <a href="https://marvelapp.flycricket.io/privacy.html">Privacy,</a></string>
    <string name="terms_conditions"> <a href="https://marvelapp.flycricket.io/terms.html">Terms and Conditions</a></string>

    <string name="linkGithubJenn">Repository: \n<a href="https://github.com/jeniferss">https://github.com/jeniferss</a></string>
    <string name="linkGithubSara">Repository: \n<a href="https://github.com/saraalves">https://github.com/saraalves</a></string>
    <string name="about_marvel_app">Marvel App is our Integration Project that was developed in the Mobile Android Development from Digital House course. The goal of this project was to enhance our development skills with the concepts taught in this process.</string>
    <string name="about_jen">Science and Technology student.</string>
    <string name="about_sara">Mobile developer at Accenture and student in the Mobile Android Development course at Digital House. Passionate about mobile solutions.</string>


</resources>