<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_app"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/dim_100_dp"
        android:contentDescription="@string/logo_do_aplicativo"
        android:src="@drawable/marvel_logo" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dim_50_dp"
        android:layout_marginStart="@dimen/dim_20_dp"
        android:layout_marginEnd="@dimen/dim_20_dp"
        android:textColorHint="@color/colorPrincipal"
        android:hint="@string/email">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:textColor="@color/colorGray"
            android:theme="@style/MarvelAppTheme"
            android:inputType="textEmailAddress"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dim_10_dp"
        android:layout_marginStart="@dimen/dim_20_dp"
        android:layout_marginEnd="@dimen/dim_20_dp"
        android:textColorHint="@color/colorPrincipal"
        android:hint="@string/senha">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:inputType="textPassword"
            android:textColor="@color/colorGray"
            android:theme="@style/MarvelAppTheme"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>


</LinearLayout>