<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_app"
    tools:context=".detalhes.view.DetalhesActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/toolbar"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/topAppBar"
                style="@style/Widget.MaterialComponents.Toolbar.Primary"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@color/colorWhite"
                app:layout_collapseMode="pin"
                app:menu="@menu/top_app_bar"
                app:navigationIcon="@drawable/ic_back_24" />

    </com.google.android.material.appbar.AppBarLayout>


    <ImageView
        android:id="@+id/imgPersonagemDetail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="@string/character"
        android:scaleType="centerCrop"
        android:src="@drawable/img_detalhes"
        />

        <TextView
            android:id="@+id/txtNomePersonagemDetail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorBlackOpaca"
            android:padding="@dimen/dim_10_dp"
            android:text="@string/nome_do_personagem"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/dim_24_sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/imgPersonagemDetail"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtSobre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dim_22_dp"
            android:layout_marginTop="@dimen/dim_10_dp"
            android:fontFamily="@font/roboto_condensed_bold"
            android:text="@string/sobre"
            app:layout_constraintTop_toBottomOf="@id/txtNomePersonagemDetail"
            app:layout_constraintStart_toStartOf="parent"
            android:textColor="@color/colorText"
            android:textSize="@dimen/dim_20_sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtDescricao"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dim_22_dp"
            android:layout_marginTop="@dimen/dim_30_dp"
            android:layout_marginEnd="22dp"
            android:fontFamily="@font/roboto_condensed_regular"
            android:lineSpacingExtra="@dimen/dim_2_dp"
            android:text="@string/drescricao"
            android:textAlignment="viewStart"
            android:textColor="@color/colorText"
            android:textSize="@dimen/dim_18_sp"
            app:layout_constraintTop_toTopOf="@id/txtSobre"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txtSobre" />

        <TextView
            android:id="@+id/txtComics"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dim_22_dp"
            android:layout_marginTop="@dimen/dim_10_dp"
            android:fontFamily="@font/roboto_condensed_bold"
            android:text="@string/comics"
            app:layout_constraintTop_toBottomOf="@id/txtDescricao"
            app:layout_constraintStart_toStartOf="parent"
            android:textColor="@color/colorText"
            android:textSize="@dimen/dim_20_sp"
            android:textStyle="bold" />


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerComics"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dim_22_dp"
            android:layout_marginEnd="@dimen/dim_22_dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txtComics"
            app:layout_constraintStart_toStartOf="parent"
            tools:listitem="@layout/chip_item" />

        <TextView
            android:id="@+id/txtStories"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dim_22_dp"
            android:layout_marginTop="@dimen/dim_10_dp"
            android:fontFamily="@font/roboto_condensed_bold"
            android:text="@string/stories"
            app:layout_constraintTop_toBottomOf="@id/recyclerComics"
            app:layout_constraintStart_toStartOf="parent"
            android:textColor="@color/colorText"
            android:textSize="@dimen/dim_20_sp"
            android:textStyle="bold" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerStrories"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dim_22_dp"
            android:layout_marginEnd="@dimen/dim_22_dp"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txtStories"
            tools:listitem="@layout/chip_item" />

</androidx.constraintlayout.widget.ConstraintLayout>